Remove fake type from repo info page

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -89,7 +89,7 @@
         <p><strong>I deploy code to other, less capable machines.</strong></p>
 
         <p>
-            You have reached the latest version of the code building and pushing tool for unix-based applications.
+            This is the latest version of the HAL 9000 code deployment system for Quicken Loans applications.
            <br><br>
             The 9000 series is the most reliable computer ever made. No 9000 computer has ever made a mistake or distorted information. We are all, by any practical definition of the words, foolproof and incapable of error.
            <br><br>
