--- a/app/templates/help/hal.twig
+++ b/app/templates/help/hal.twig
@@ -6,7 +6,7 @@
     <h2>Help - HAL 9000</h2>
 
     <div class="hero-video">
-        <video controls>
+        <video controls autoplay loop>
             <source src="/vid/hal.mp4" type="video/mp4">
             <source src="/vid/hal.ogg" type="video/ogg">
         </video>
