--- a/app/templates/admin/dashboard.twig
+++ b/app/templates/admin/dashboard.twig
@@ -47,6 +47,11 @@
                         <svg class="icon"><use xlink:href="#tick"></use></svg> Audit Logs
                     </a>
                 </li>
+                <li>
+                    <a href="{{ urlFor('admin.server.status') }}" class="btn btn--primary">
+                        <svg class="icon"><use xlink:href="#tick"></use></svg> Global Server Status
+                    </a>
+                </li>
                 {% if isUserSuperAdmin(currentUser) %}
                 <li>
                     <a href="{{ urlFor('admin.super') }}" class="btn btn--destructive">
