Small doc update

--- a/app/templates/help/deployment.twig
+++ b/app/templates/help/deployment.twig
@@ -182,15 +182,15 @@
             </tr>
             <tr>
                 <td>HAL_REPO</td>
-                <td>Hal name for the deployed application</td>
+                <td>Hal identifier for the deployed application</td>
             </tr>
             <tr>
                 <td>HAL_HOSTNAME</td>
-                <td>Hostname of server</td>
+                <td>Hostname of server (<strong>rsync</strong> deployments only)</td>
             </tr>
             <tr>
                 <td>HAL_PATH</td>
-                <td>Full path of deployment directory on server</td>
+                <td>Full path of deployment directory on server (<strong>rsync</strong> deployments only)</td>
             </tr>
         </tbody>
     </table>
